--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
         "@discordjs/builders": "^0.15.0",
         "@discordjs/rest": "^0.5.0",
         "chalk": "^4.1.2",
+        "discord": "^0.8.2",
         "discord-api-types": "^0.34.0",
-        "discord.js": "^13.8.0",
-        "node-fetch": "^2.6.7"
+        "discord.js": "^13.8.1",
+        "express": "^4.18.1",
+        "knex": "^2.2.0",
+        "node-fetch": "^2.6.7",
+        "pg": "^8.7.3"
     },
     "devDependencies": {
+        "@types/express": "^4.17.13",
         "@types/mocha": "^9.1.0",
         "@types/node": "^17.0.21",
         "@typescript-eslint/eslint-plugin": "^5.9.0",
@@ -35,7 +40,7 @@
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
         "mocha": "^9.2.1",
-        "nodemon": "^2.0.15",
+        "nodemon": "^2.0.19",
         "prettier": "^2.5.1",
         "rimraf": "^3.0.2",
         "ts-node": "^10.7.0",
