--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "register-slash-commands": "node dist/scripts/registerSlashCommands.js",
         "lint": "eslint --ext '.ts' src test",
         "lint-fix": "eslint --fix --ext '.ts' src test",
+        "make-migration": "knex migrate:make",
         "build": "rimraf dist && npm run -s build-ts",
         "watch": "rimraf dist && npm run -s watch-ts",
         "build-ts": "tsc",
@@ -23,6 +24,7 @@
         "discord": "^0.8.2",
         "discord-api-types": "^0.34.0",
         "discord.js": "^13.8.1",
+        "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "knex": "^2.2.0",
         "node-fetch": "^2.6.7",
