--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "knex": "^2.2.0",
+        "knex-stringcase": "^1.4.6",
         "node-fetch": "^2.6.7",
         "pg": "^8.7.3"
     },
