--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "knex": "^2.2.0",
         "knex-stringcase": "^1.4.6",
         "node-fetch": "^2.6.7",
-        "pg": "^8.7.3"
+        "pg": "^8.7.3",
+        "source-map-support": "^0.5.21"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
