--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "start": "node dist/app.js",
         "start-dev": "nodemon dist/app.js",
-        "test": "mocha --recursive --watch-extensions '.test.ts' test/**",
+        "test-integration": "mocha --recursive --watch-extensions '.test.ts'",
         "register-slash-commands": "node dist/scripts/register-slash-commands.js",
         "lint": "eslint --ext '.ts' src test",
         "lint-fix": "eslint --fix --ext '.ts' src test",
@@ -37,21 +37,22 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
-        "@types/mocha": "^9.1.0",
+        "@types/mocha": "^9.1.1",
         "@types/node": "^17.0.21",
-        "@typescript-eslint/eslint-plugin": "^5.9.0",
-        "@typescript-eslint/parser": "^5.9.0",
+        "@typescript-eslint/eslint-plugin": "^5.37.0",
+        "@typescript-eslint/parser": "^5.37.0",
         "chai": "^4.3.6",
-        "deep-equal-in-any-order": "^1.1.15",
-        "eslint": "^8.6.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "mocha": "^9.2.1",
+        "eslint": "^8.23.1",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "mocha": "^10.0.0",
+        "nock": "^13.2.9",
         "nodemon": "^2.0.19",
         "prettier": "^2.5.1",
         "rimraf": "^3.0.2",
-        "ts-node": "^10.7.0",
-        "typescript": "^4.5.4"
+        "sinon": "^14.0.0",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.8.3"
     },
     "mocha": {
         "require": [
