--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "lodash": "^4.17.21",
         "node-fetch": "^2.6.7",
         "pg": "^8.7.3",
+        "pg-promise": "^10.12.0",
         "source-map-support": "^0.5.21"
     },
     "devDependencies": {
