--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,8 @@ jobs:
           POSTGRES_PASSWORD: postgres
           POSTGRES_USER: postgres
           POSTGRES_DB: postgres
+          DATABASE_USER: postgres
+          DATABASE_PASSWORD: postgres
 
         options: >-
           --health-cmd pg_isready
