--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,6 @@ jobs:
           POSTGRES_PASSWORD: postgres
           POSTGRES_USER: postgres
           POSTGRES_DB: postgres
-          DATABASE_USER: postgres
-          DATABASE_PASSWORD: postgres
 
         options: >-
           --health-cmd pg_isready
@@ -40,6 +38,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm run test-integration
+    - name: Install dependencies
+      run: npm ci
+    - name: Compile
+      run: npm run build --if-present
+    - name: Integration tests
+      run: npm run test-integration
+
