try more env variables

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
         image: postgres
 
         env:
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD: p
           POSTGRES_USER: postgres
           POSTGRES_DB: postgres
 
@@ -44,4 +44,10 @@ jobs:
       run: npm run build --if-present
     - name: Integration tests
       run: npm run test-integration
+      env:
+        POSTGRES_DB: postgres
+        POSTGRES_HOST: postgres
+        POSTGRES_PASSWORD: p
+        POSTGRES_USER: postgres
+
 
