--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "source-map-support": "^0.5.21"
     },
     "devDependencies": {
+        "@types/chai": "^4.3.3",
         "@types/express": "^4.17.13",
         "@types/mocha": "^9.1.1",
         "@types/node": "^17.0.21",
