--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@discordjs/builders": "^0.15.0",
         "@discordjs/rest": "^0.5.0",
         "@types/lodash": "^4.14.184",
+        "@types/luxon": "^3.1.0",
         "bluebird": "^3.7.2",
         "chalk": "^4.1.2",
         "discord": "^0.8.2",
@@ -31,6 +32,7 @@
         "knex": "^2.2.0",
         "knex-stringcase": "^1.4.6",
         "lodash": "^4.17.21",
+        "luxon": "^3.1.0",
         "node-fetch": "^2.6.7",
         "pg": "^8.7.3",
         "pg-promise": "^10.12.0",
