--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@discordjs/rest": "^1.7.1",
         "bluebird": "^3.7.2",
         "chalk": "^4.1.2",
+        "cors": "^2.8.5",
         "discord": "^0.8.2",
         "discord-api-types": "^0.37.43",
         "discord.js": "^14.11.0",
@@ -40,6 +41,7 @@
     },
     "devDependencies": {
         "@types/chai": "^4.3.4",
+        "@types/cors": "^2.8.17",
         "@types/express": "^4.17.17",
         "@types/lodash": "^4.14.184",
         "@types/luxon": "^3.1.0",
