--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,5 @@
         "skipLibCheck": true
     },
     "exclude": ["dist", "node_modules"],
-    "include": [
-        "src/**/*.ts"
-    ]
+    "include": [ "src/**/*.ts"]
 }
