updating to eslint 9

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
         "start-web-dev": "nodemon dist/web.js",
         "test-integration": "mocha --recursive --watch-extensions '.test.ts'",
         "register-slash-commands": "node dist/scripts/register-slash-commands.js",
-        "lint": "eslint --ext '.ts' src test",
-        "lint-fix": "eslint --fix --ext '.ts' src test",
+        "lint": "eslint",
+        "lint-fix": "eslint --fix",
         "make-migration": "knex migrate:make",
         "build": "rimraf dist && npm run -s build-ts",
         "watch": "rimraf dist && npm run -s watch-ts",
@@ -47,20 +47,19 @@
         "@types/luxon": "^3.1.0",
         "@types/mocha": "^10.0.1",
         "@types/node": "^18.15.11",
-        "@typescript-eslint/eslint-plugin": "^5.58.0",
-        "@typescript-eslint/parser": "^5.58.0",
         "chai": "^4.3.7",
-        "eslint": "^8.38.0",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-prettier": "^4.2.1",
+        "eslint": "^9.9.1",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.2.1",
         "mocha": "^10.2.0",
         "nock": "^13.3.0",
         "nodemon": "^2.0.22",
-        "prettier": "^2.8.7",
+        "prettier": "^3.3.3",
         "rimraf": "^5.0.0",
         "sinon": "^15.0.3",
         "ts-node": "^10.9.1",
-        "typescript": "^5.0.4"
+        "typescript": "^5.5.4",
+        "typescript-eslint": "^8.4.0"
     },
     "mocha": {
         "require": [
