--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,6 +42,10 @@ jobs:
       run: npm ci
     - name: Compile
       run: npm run build --if-present
+    - name: Lint
+      run: npm run lint
+    - name: Unit tests
+      run: npm run test-unit
     - name: Integration tests
       run: npm run test-integration
       env:
