--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "start-dev": "nodemon dist/app.js",
         "start-web": "node dist/web.js",
         "start-web-dev": "nodemon dist/web.js",
-        "test-integration": "mocha --recursive --watch-extensions '.test.ts'",
+        "test-integration": "mocha test/integration/*",
+        "test-unit": "mocha test/unit/*",
         "register-slash-commands": "node dist/scripts/register-slash-commands.js",
         "lint": "eslint",
         "lint-fix": "eslint --fix",
@@ -34,9 +35,9 @@
         "knex-stringcase": "^1.4.6",
         "lodash": "^4.17.21",
         "luxon": "^3.3.0",
-        "node-fetch": "^2.6.7",
-        "pg": "^8.11.0",
-        "pg-promise": "^11.5.0",
+        "node-fetch": "^2.7.0",
+        "pg": "^8.12.0",
+        "pg-promise": "^11.9.1",
         "source-map-support": "^0.5.21"
     },
     "devDependencies": {
@@ -46,14 +47,14 @@
         "@types/lodash": "^4.14.184",
         "@types/luxon": "^3.1.0",
         "@types/mocha": "^10.0.1",
-        "@types/node": "^18.15.11",
+        "@types/node": "^20.14.7",
         "chai": "^4.3.7",
         "eslint": "^9.9.1",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
         "mocha": "^10.2.0",
         "nock": "^13.3.0",
-        "nodemon": "^2.0.22",
+        "nodemon": "^3.1.4",
         "prettier": "^3.3.3",
         "rimraf": "^5.0.0",
         "sinon": "^15.0.3",
@@ -68,6 +69,8 @@
         "timeout": 20000,
         "extension": [
             "ts"
-        ]
+        ],
+        "recursive": true,
+        "watch-extensions": ["test.ts"]
     }
 }
