--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "@types/luxon": "^3.1.0",
         "@types/mocha": "^10.0.1",
         "@types/node": "^20.14.7",
+        "@types/sinon": "^17.0.3",
         "chai": "^4.3.7",
         "eslint": "^9.9.1",
         "eslint-config-prettier": "^9.1.0",
@@ -71,6 +72,8 @@
             "ts"
         ],
         "recursive": true,
-        "watch-extensions": ["test.ts"]
+        "watch-extensions": [
+            "test.ts"
+        ]
     }
 }
